# pinyin

./: .eslintrc.yml  .gitignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  pinyin.wasi-browser.js  pinyin.wasi.cjs  postinstall.js  postinstall.mjs  renovate.json  simple-test.js  tsconfig.json
.github/workflows/: CI.yml  auto-merge.yml  bench.yml  lint.yml
__test__/: index.spec.ts  index.spec.ts.md  index.spec.ts.snap
benchmark/: bench.ts  long.txt
dev/bench/: data.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
