[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "napi-pinyin"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
jieba-rs = "0.6"
napi = "2"
napi-derive = "2"
once_cell = "1"
pinyin = "0.9"
rayon = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
